# sim-provider

./: .gitignore  README.md  doover_config.json  pyproject.toml
src/integration/: __init__.py  app_config.py  application.py  m2mone_client.py
src/sim_dashboard/: __init__.py  app_config.py  app_ui.py  application.py
src/sim_provider_m2mone/: __init__.py  app_config.py  application.py  m2mone_client.py
tests/: test_imports.py
widget/: ConcatenatePlugin.ts  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
widget/src/: FleetSimUsageWidget.tsx  globals.d.ts  styles.css
widget/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx
widget/src/lib/: sim.ts
