[project]
name = "sim-provider"
version = "0.1.0"
description = "Doover SIM-provider apps: per-provider integrations that reconcile assigned-device SIMs into a shared sim-card channel, plus a fleet SIM-usage dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "pydoover>=0.4.13",
]

[project.scripts]
export-config-m2mone = "sim_provider_m2mone.app_config:export"
export-config-dashboard = "sim_dashboard.app_config:export"
export-ui-dashboard = "sim_dashboard.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_provider_m2mone", "src/sim_dashboard"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.uv.sources]
pydoover = { git = "https://github.com/getdoover/pydoover", branch = "main" }
